Menage view created & README updated
README.md: init project commands updated
Main view: remove sidenav
Menage view: created, first draft

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -76,6 +76,16 @@ md-toolbar #sidenav-background {
 }
 
 
+#menageSearchInputContainer .md-errors-spacer {
+  display: none;
+}
+
+#infoMenageSidenav.md-locked-open {
+   width: 350px;
+   min-width: 350px;
+   max-width: 350px;
+}
+
 
 
 
