--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -86,6 +86,26 @@ md-toolbar #sidenav-background {
    max-width: 350px;
 }
 
+/*Needed to be always over the other components of the pages but not over select items*/
+#mainToolbar {
+  z-index: 69;
+}
+
+
+.taskNotOk {
+  fill: #F44336;
+  margin-top: auto !important;
+  margin-bottom: auto !important;
+}
+
+.taskOk {
+  fill: #2E7D32;
+}
+
+md-card md-list {
+  padding: 0px;
+}
+
 
 
 
