Home view created + Add FAB button to add a menage or an individu

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -111,6 +111,14 @@ md-card md-list {
   max-width: 400px;
 }
 
+#addMenage {
+  top: auto;
+  right: 20px;
+  bottom: 20px;
+  left: auto;
+  position: fixed;
+}
+
 
 
 /* Responsive: Portrait tablets and up */
