--- a/app/views/menagecreation.html
+++ b/app/views/menagecreation.html
@@ -91,7 +91,7 @@
             <span md-highlight-text="searchText">{{item.display}}</span>
           </md-item-template>
           <md-not-found>
-	          <a ng-click="ctrl.newIndividu(ctrl.searchText)">Aucun résulat pour "{{searchText}}". Créez un nouvel individu en cliquant ici !</a>
+	          <a ng-click="showCreateIndividu($event)">Aucun résulat pour "{{searchText}}". Créez un nouvel individu en cliquant ici !</a>
 	        </md-not-found>
           <div ng-messages="menageCreationForm.chefDeFamilleField.$error" ng-if="menageCreationForm.chefDeFamilleField.$touched">
             <div ng-message="required">Ce champ est <b>obligatoire !</b></div>
