--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -111,7 +111,7 @@ md-card md-list {
   max-width: 400px;
 }
 
-#addMenage {
+#addMenage, #addBesoin {
   top: auto;
   right: 20px;
   bottom: 20px;
@@ -128,7 +128,6 @@ md-card-header-text > h2 {
   margin-top: auto;
   margin-bottom: auto;
 }
-
 
 
 /* Responsive: Portrait tablets and up */
