--- a/app/views/home.html
+++ b/app/views/home.html
@@ -84,7 +84,7 @@
             </md-card>
 
 
-            <md-fab-speed-dial id="addMenage" md-direction="up" class="md-fling">
+            <md-fab-speed-dial id="addMenage" md-direction="up" class="md-scale">
               <md-fab-trigger>
                 <md-button aria-label="menu" class="md-fab md-primary">
                   <md-icon md-svg-icon="content:ic_add_24px" aria-label="add menage"></md-icon>
